--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,9 @@
     --grey: #545861;
     --lemon-chiffon: #FFFACD;
     --body-yellow: #f3e199;
+    --white: #ffffff;
+    --alt-bck: rgb(17, 52, 17);
+    --alt-col: #091a02;
 }
 
 * {
@@ -11,56 +14,66 @@
 }
 
 html {
+    
     scroll-behavior: smooth;
 }
 
 body {
-    background-color: white;
+    width: 100%;
+    min-height: 100vh;
+    background-color: var(--white);
     font-family: Georgia, serif;
 }
 
+h1, 
 h3 {
     font-size: 50px;
-}
-/* header properties*/
-.header {
-    padding: 1.5rem 1rem;
-    color: var(--grey);
-    background-color: var(--lemon-chiffon);
-}
-
-.header h1 {
-    display: inline-block;
-    font-size: 50px;
-}
-
-.header .links {
-    padding-top: -20px;
-    margin-right: 20px;
-    float: right;
-    font-size: 20px;
-    position: relative;
-}
-
-.header div ul {
-    list-style-type: none;
-}
-
-.header div ul li {
-    display: inline;
-    margin-left: 25px;
 }
 
 a {
     color: var(--grey);
     text-decoration: none;
 }
- 
-.info-bar:hover {
-    font-size: 1rem;
-    transition: all 1s ; 
-  }
+/* nav bar */
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: var(--lemon-chiffon);
+  color: var(--grey);
+}
 
+@media screen and (max-width: 1000px) {
+    .navbar {
+        background-color: var(--alt-bck);
+        color: var(--white);
+    }
+    .info-bar {
+        background-color: var(--alt-bck);
+        color: var(--white);
+    }
+}
+
+.links ul {
+    display: flex;
+    gap: 20px;
+    font-weight: bold;
+    padding-right: 20px;
+    font-size: 25px;
+}
+
+li {
+    list-style-type: none;
+}
+
+li:hover {
+    background-color: var(--body-yellow);
+    border-radius: 5px;
+    transition: 0.3s ease;
+}
+
+/* about me */
   .about-me {
     display: grid;
     align-items: center;
@@ -68,8 +81,15 @@ a {
     color: var(--grey);
   }
 
+  @media screen and (max-width: 1000px) {
+    .about-me {
+        background-color: var(--alt-col);
+        color: var(--white);
+    }
+}
+
   .port-img{
-    max-width: 20%;
+    width: 20%;
     max-height: 100%;
     float: right;
     padding: 20px;
@@ -80,12 +100,17 @@ a {
     padding: 20px;
     line-height: 4rem;
   }
-
-  p {
-    font-size: 16px;
-  }
+p {
+    font-size: 25px;
+    width: 800px;
+    height: 200px;
+}
 
 /* work section*/
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
 .work {
   background-color: var(--body-yellow);
   color: var(--grey);
@@ -96,7 +121,7 @@ a {
 }
 
 .work-grid {
-display: flex;
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
@@ -106,16 +131,15 @@ display: flex;
   margin: 0 auto;
   padding: 20px 10px;
 }
-
+ 
 .survey {
-    width: 1015px;
-    height: 700px;
+    width: 900px;
 }
+
 .tribute {
     width: 500px;
-    height: 333px;
+    height: 330px;
 }
-
 .placeholder {
     width: 500px;
     height: 100%;
