--- a/assets/style.css
+++ b/assets/style.css
@@ -14,14 +14,14 @@
   padding: 0;
 }
 
-html {
-    
-    scroll-behavior: smooth;
+html 
+{
+   scroll-behavior: smooth;
 }
 
 body {
     width: 100%;
-    min-height: 100vh;
+    min-height: 100%;
     background-color: var(--white);
     font-family: Georgia, serif;
 }
@@ -35,9 +35,24 @@ a {
     color: var(--grey);
     text-decoration: none;
 }
-/* nav bar */
+/* nav bar 
+.work-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 20px 10px;
+}
+*/
 .navbar {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 100%;
   align-items: center;
   justify-content: space-between;
   padding: 20px;
@@ -73,13 +88,54 @@ li:hover {
         color: var(--alt-text);
     }
 }
-
 /* about me */
-  .about-me {
-    display: grid;
-    align-items: center;
+.about {
+    padding: 20px;
+    width: 100%;
+    height: 600px;
     background-color: var(--body-yellow);
     color: var(--grey);
+    line-height: 3rem;
+}
+
+.__img {
+    padding: 20px;
+    display:;
+    width: 400px;
+    height: 500px;
+    float: right;
+}
+
+.__text {
+    display: inline-block;
+    width: 80px;
+    float: left;
+    line-height: 2px;
+
+}
+
+@media screen and (max-width: 1000px) {
+    .about {
+        background-color: var(--alt-col);
+        color: var(--alt-text);
+    }
+}
+
+   /* margin: 20px 30px 0 0;
+    width: 200px;
+    object-fit: contain;
+    vertical-align: right;
+
+}
+}
+
+/* about me 
+  .about-me {
+    display: inline-block;
+    align-items:center;
+    background-color: var(--body-yellow);
+    color: var(--grey);
+    max-width: 100%;
   }
 
   @media screen and (max-width: 1000px) {
@@ -89,27 +145,33 @@ li:hover {
     }
 }
 
+.img {
+    width: 200px;
+    height: 50%;
+    
+}
+
   .port-img{
-    width: 20%;
-    max-height: 100%;
-    float: right;
+    width: 400px;
+    height: 100%;
     padding: 20px;
+    float: right;
   }
 
   .ab-text {
-    position: absolute;
+    /*position: abslute;
     padding: 20px;
     line-height: 4rem;
   }
 
-.p {
-    
+ p {
+    text-align: justify;
+    text-justify: inter-word;
     font-size: 20px;
-    width: 650px;
-    height: 200px;
-    overflow:hidden;
+    width: 60%;
+    margin:
 }
-
+*/
 /* work section*/
 .work {
     background-color: var(--body-yellow);
