--- a/assets/style.css
+++ b/assets/style.css
@@ -146,6 +146,12 @@ img {
     width: 500px;
     height: 330px;
 }
+
+.food-ease {
+    width: 500px;
+    height: 100%;
+}
+
 .placeholder {
     width: 500px;
     height: 100%;
